--- a/manual/input/modules.tex
+++ b/manual/input/modules.tex
@@ -398,8 +398,8 @@ implements a scalar mass-damper-spring system.
         | \kw{nsqp}
         | \kw{latin}
         | \kw{latin_w}
-        | \kw{newton_min}
-        | \kw{newton_FB}
+        | \kw{Newton_min}
+        | \kw{Newton_FB}
 \end{Verbatim}
 
 \subsubsection{Output}
