--- a/manual/input/module-hydrodynamic_plain_bearing.tex
+++ b/manual/input/module-hydrodynamic_plain_bearing.tex
@@ -47,9 +47,9 @@ This module implements a hydrodynamic plain bearing according to Hans J\"urgen B
         \kw{relative clearance} , (\ty{real}) \bnt{Psi} ,
         \kw{oil viscosity} , (\ty{real}) \bnt{eta} ,
         \kw{initial assembly factor} , (\hty{DriveCaller}) \bnt{assembly_factor}
-        [ , \kw{number of gauss points} , (\ty{integer}) \bnt{num_gauss_points} ]
+        [ , \kw{number of Gauss points} , (\ty{integer}) \bnt{num_Gauss_points} ]
         [ , \kw{output points} , (\ty{integer}) \bnt{num_output_points} 
-            [ , \{ \kw{gauss point} , (\ty{integer}) \bnt{gauss_index_1 } |
+            [ , \{ \kw{Gauss point} , (\ty{integer}) \bnt{Gauss_index_1 } |
                 \kw{custom} , \kw{r} , (\ty{real}) \bnt{r_1} , 
                 \kw{alpha} , (\ty{real}) \bnt{alpha_1} \}
             ]
@@ -62,5 +62,5 @@ We assume that the axis of rotation is always axis three in the reference frame 
 \cos{\varphi}={\boldsymbol{e}_{3}}^T \, {\boldsymbol{R}_1}^T \, \boldsymbol{R}_2 \, \boldsymbol{e}_{3} \approx 1
 \end{equation}
 The effective angular velocity of the bearing rigidly connected to node \bnt{bearing\_node} is $\bar{\omega}_2={\boldsymbol{e}_{3}}^T\,{\boldsymbol{R}_{2}}^T\,\boldsymbol{\omega}_2$ and the effective angular velocity of the shaft connected to node \bnt{shaft\_node} is $\bar{\omega}_1={\boldsymbol{e}_{3}}^T\,{\boldsymbol{R}_{2}}^T\,\boldsymbol{\omega}_1$.
-\bnt{o1} and \bnt{o2} are the offsets between nodes and centre of the shaft and bearing respectively. The width of the bearing is \bnt{b} and the relative clearance of the bearing is defined as $\bnt{Psi}=(\bnt{D} - \bnt{d})/\bnt{D}$ where \bnt{D} is the inner diameter of bearing and \bnt{d} is the outer diameter of the shaft. \bnt{eta} is the dynamic viscosity of the oil and its SI unit is [Pa s]. It is possible to disable the hydrodynamic bearing force at the beginning of the simulation by providing some sort of ramp up function called \bnt{assembly\_factor}. In order to take into account small misalignments between shaft and bearing, one can set the number of Gauss points \bnt{num\_gauss\_points} to a value of two, three or six. In that case hydrodynamic bearing forces will be evaluated at multiple points along the width of the bearing and output will be generated for each Gauss point by default. Output can be customised by selecting only a subset of available Gauss points by means of \bnt{gauss\_index\_1} or by specifying custom locations \bnt{r\_1} and weighting factors \bnt{alpha\_1} to be output. If the option \bnt{extend\_axis\_of\_shaft} is enabled, axial movement of the shaft is allowed and bearing kinematics and reaction forces will be evaluated at the intersection point between the axis of the shaft and centre plane of the bearing. According to the theory of a rigid bearing, eccentricities of $\varepsilon \geq 1$ are not possible and the simulation would fail if $\varepsilon$ becomes one or higher. In addition to that, the approximation of the Sommerfeld numbers is valid until a relative eccentricity of $\varepsilon=0.999$. For that reason a linear extrapolation of the Sommferfeld numbers is used in case of $\varepsilon \geq \bnt{epsilon\_max}$ which is equal to $0.999$ by default.
+\bnt{o1} and \bnt{o2} are the offsets between nodes and centre of the shaft and bearing respectively. The width of the bearing is \bnt{b} and the relative clearance of the bearing is defined as $\bnt{Psi}=(\bnt{D} - \bnt{d})/\bnt{D}$ where \bnt{D} is the inner diameter of bearing and \bnt{d} is the outer diameter of the shaft. \bnt{eta} is the dynamic viscosity of the oil and its SI unit is [Pa s]. It is possible to disable the hydrodynamic bearing force at the beginning of the simulation by providing some sort of ramp up function called \bnt{assembly\_factor}. In order to take into account small misalignments between shaft and bearing, one can set the number of Gauss points \bnt{num\_Gauss\_points} to a value of two, three or six. In that case hydrodynamic bearing forces will be evaluated at multiple points along the width of the bearing and output will be generated for each Gauss point by default. Output can be customised by selecting only a subset of available Gauss points by means of \bnt{Gauss\_index\_1} or by specifying custom locations \bnt{r\_1} and weighting factors \bnt{alpha\_1} to be output. If the option \bnt{extend\_axis\_of\_shaft} is enabled, axial movement of the shaft is allowed and bearing kinematics and reaction forces will be evaluated at the intersection point between the axis of the shaft and centre plane of the bearing. According to the theory of a rigid bearing, eccentricities of $\varepsilon \geq 1$ are not possible and the simulation would fail if $\varepsilon$ becomes one or higher. In addition to that, the approximation of the Sommerfeld numbers is valid until a relative eccentricity of $\varepsilon=0.999$. For that reason a linear extrapolation of the Sommferfeld numbers is used in case of $\varepsilon \geq \bnt{epsilon\_max}$ which is equal to $0.999$ by default.
 %\end{document}
