--- a/manual/input/scalarfunctions.tex
+++ b/manual/input/scalarfunctions.tex
@@ -240,7 +240,7 @@ Unless \kw{do not extrapolate} is set, when the input is outside
 the provided values of \nt{x} the value is extrapolated. 
 If \kw{do not extrapolate} is set and \kw{bailout}
 is \emph{not} set then the scalar function returns the value of the nearest point.
-If, instead, \kw{bailout} is set the MBDyn will terminate the simulation.
+If, instead, \kw{bailout} is set then MBDyn will terminate the simulation.
 
 
 
@@ -263,7 +263,7 @@ the provided values of \nt{x} the value is extrapolated using the slope
 of the nearest point pair.
 If \kw{do not extrapolate} is set and \kw{bailout}
 is \emph{not} set then the scalar function returns the value of the nearest point.
-If, instead, \kw{bailout} is set the MBDyn will terminate the simulation.
+If, instead, \kw{bailout} is set then MBDyn will terminate the simulation.
 
 \subsubsection{Chebychev Scalar Function}
 %\begin{verbatim}
