Update documentation for the NOX solver.

--- a/manual/mybib.bib
+++ b/manual/mybib.bib
@@ -3050,6 +3050,13 @@
 	year = {1992}
 }
 
+@MANUAL{TRILINOS-WEBSITE,
+        title = {The {T}rilinos {P}roject {W}ebsite},
+        author = {The {T}rilinos {P}roject {T}eam},
+        year = {2020 (acccessed May 22, 2020)},
+        url = {https://trilinos.github.io}
+}
+
 @article{SINKHORN-KNOPP-1967,
         author = {R. Sinkhorn and P. Knopp},
         title = {Concerning nonnegative matrices and doubly stochastic matrices},
