--- a/manual/input/general.tex
+++ b/manual/input/general.tex
@@ -2188,13 +2188,13 @@ Note that this drive caller \underline{does not correspond to} $\cos(t)$.
 
 \paragraph{Example.}
 \begin{verbatim}
-    # starts at 1.5, duration = T, amplitude = A, a "bump" of height 2*A
+    # starts at Time = 1.5, duration = T, amplitude = A, a "bump" of height 2*A
     ..., cosine, 1.5, 2*pi/T, A, one, 0., ...
 
-    # starts at .5, duration = T, amplitude = A, half "bump", remains at 2*A
+    # starts at Time = .5, duration = T, amplitude = A, half "bump", remains at 2*A
     ..., cosine, .5, pi/T, A, half, 0., ...
 
-    # starts at 1.2, frequency = Omega, amplitude = A, lasts forever
+    # starts at Time = 1.2, frequency = Omega, amplitude = A, lasts forever
     ..., cosine, 1.2, Omega, A, forever, 0., ...
 \end{verbatim}
 
