Slight clarification about orientation output format

--- a/manual/input/nodes.tex
+++ b/manual/input/nodes.tex
@@ -327,7 +327,7 @@ All the quantities are expressed in the global frame, except for
 the \kw{relative frame} type of \kw{dummy} node, whose quantities are,
 by definition, in the relative frame.
 
-There exist two variants of this output.
+Other two variants of this output are available.
 The output of the orientation can be modified by requesting
 the three Euler angles, in 3 formats, the three components of the Euler vector,
 or the nine components of the orientation matrix.
