--- a/manual/mybib.bib
+++ b/manual/mybib.bib
@@ -3057,6 +3057,13 @@
         url = {https://trilinos.github.io}
 }
 
+@MANUAL{SICONOS-WEBSITE,
+        title = {Siconos: nonsmooth numerical simulation},
+        author = {Vincent Acary and Maurice Bremond and Olivier Huber and Franck Perignon and Roger Pissard-Gibollet},
+        year = {2022 (acccessed July 16, 2022)},
+        url = {https://github.com/siconos/siconos}
+}
+
 @article{SINKHORN-KNOPP-1967,
         author = {R. Sinkhorn and P. Knopp},
         title = {Concerning nonnegative matrices and doubly stochastic matrices},
