add integrators paper to the tecman

--- a/manual/mybib.bib
+++ b/manual/mybib.bib
@@ -3217,3 +3217,18 @@
 	note = {{doi:10.1007/s00466-020-01933-y}}
 }
 
+@article{zhang_performance_2022,
+	title = {Performance of implicit {A}-stable time integration methods for multibody system dynamics},
+	volume = {54},
+	issn = {1573-272X},
+	url = {https://doi.org/10.1007/s11044-021-09806-9},
+	doi = {10.1007/s11044-021-09806-9},
+	language = {en},
+	number = {3},
+	urldate = {2022-08-26},
+	journal = {Multibody System Dynamics},
+	author = {Zhang, Huimin and Zhang, Runsen and Zanoni, Andrea and Masarati, Pierangelo},
+	month = mar,
+	year = {2022},
+	pages = {263--301}
+}
