--- a/manual/mybib.bib
+++ b/manual/mybib.bib
@@ -3232,3 +3232,37 @@
 	year = {2022},
 	pages = {263--301}
 }
+
+
+@article{kennedy_diagonally_2019,
+	title = {Diagonally implicit {Runge}--{Kutta} methods for stiff {ODEs}},
+	volume = {146},
+	issn = {0168-9274},
+	url = {https://www.sciencedirect.com/science/article/pii/S0168927419301801},
+	doi = {10.1016/j.apnum.2019.07.008},
+	language = {en},
+	urldate = {2022-08-26},
+	journal = {Applied Numerical Mathematics},
+	author = {Kennedy, Christopher A. and Carpenter, Mark H.},
+	month = dec,
+	year = {2019},
+	keywords = {Embedded method, L-stability, L-stable, Simplifying assumptions, Singular perturbation equations},
+	pages = {221--244}
+}
+
+@article{zhang_optimization_2020,
+	title = {On the optimization of n-sub-step composite time integration methods},
+	volume = {102},
+	issn = {1573-269X},
+	url = {https://doi.org/10.1007/s11071-020-06020-8},
+	doi = {10.1007/s11071-020-06020-8},
+	language = {en},
+	number = {3},
+	urldate = {2022-08-26},
+	journal = {Nonlinear Dynamics},
+	author = {Zhang, Huimin and Zhang, Runsen and Xing, Yufeng and Masarati, Pierangelo},
+	month = nov,
+	year = {2020},
+	keywords = {Energy-conserving, High-accuracy, n-Sub-step composite method, Optimization},
+	pages = {1939--1962}
+}
